# uni

./: docker-compose.yaml  Лабораторная работа 1 .docx
lab2_final/: 001_initial.py  alembic.ini  database.py  database_extended.py  lab2.db  main.py  queries.py  requirements.txt  seed_data.py
lab2_final/migrations/: env.py
lab3/: docker-compose.yml  requirements.txt
lab4/: init.sql  pyproject.toml  requirements-test.txt
lab4/api/controllers/: user_controller.py
lab4/api/models/: user.py
lab4/api/repositories/: user_repository.py
lab4/api/services/: user_service.py
lab4/app/: main.py
lab4/htmlcov/: class_index.html  function_index.html  index.html  status.json  z_09ae5906130973f2_user_controller_py.html  z_0a6ed97f6453f586_user_py.html  z_5f5a17c013354698_main_py.html  z_63853014bcce209d_user_repository_py.html  z_daf816d9905cf04c_user_service_py.html
lab4/tests/: conftest.py  test_app_config.py  test_diagnostic.py  test_final_report.py  test_minimal_controller.py  test_simple.py
lab4/tests/test_controllers/: test_user_controller.py  test_user_controller_simple.py
lab4/tests/test_repositories/: test_user_repository.py
lab4/tests/test_services/: test_user_service.py
lab5/: alembic.ini  docker-compose.yml  dockerfile  entrypoint.sh  pyproject.toml  run.py
lab6/: database.py  main.py  models.py  producer.py  rabbitmq_simulator.py  requirements.txt  schemas.py  warehouse.db
lab7/: README.md  cache.py  config.py  docker-compose.yml  main.py
lab8/: .env.example  READMI.md  create_tables.py  docker-compose.yml  requirements.txt  test_server.py
(+26 files in other folders)
